feat(medical): add service for medical records (#2)
